Miscellaneous low-risk code cleanup (#1399)
* Miscellaneous low-risk code cleanup

* fixup